--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include MANIFEST.in
 include README.rst
 recursive-include lazycrud/templates *
 recursive-include lazycrud/static *
+recursive-include lazycrud/locale *
